--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "gulp": "^3.9.1"
   },
   "devDependencies": {
+    "eslint": "^4.18.2",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.9.0",
     "gulp-sass": "^3.1.0"
   },
   "scripts": {
