--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,19 @@
 {
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "globals": {
+        "window": true,
+        "document": true,
+        "localStorage": true,
+        "Storage": true,
+        "session": true,
+        "service": true
+    },
+    "rules" : {
+        "no-param-reassign": 0,
+        "quotes": ["error", "single", { "allowTemplateLiterals": true }],
+        "wrap-iife": 0,
+        "prefer-template": 1,
+        "no-unused-vars": ["error", { "vars": "local" }],
+        "no-plusplus": 0
+    }
 }
